# krystal-overlord

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  coverage.xml
.github/workflows/: krystal-overlord-ci.yml  krystal_overlord.yml  starlight_ut.yml
src/: CMakeLists.txt  main.cpp
src/api/: ApiService.cpp  ApiService.h  RouterWrapper.h  WebServer.cpp  WebServer.h
src/api/controllers/: ControllersController.h
src/api/models/: Model.h
src/api/routes/: ControllerRoutes.cpp  ControllerRoutes.h  Routes.h
src/client/: ClientService.h
src/containers/: AtomicMap.hpp
src/core/: Error.h  Error.hpp  ErrorBase.hpp  ErrorCode.h  Json.cpp  Json.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Service.cpp  Service.h  ServiceManager.cpp  ServiceManager.h  ServiceManager.hpp  Thread.h
src/device/: Controller.h  ControllerDescription.h  ControllerModel.h  Device.h  DeviceDescription.h  DeviceModel.h  DeviceService.h  DeviceSession.h
src/event/: DeviceEvents.h  Misc.hpp
src/event/api/: GetControllers.h
src/event/device/: NewController.h  NewDevice.h
src/net/: AcceptorService.h  Session.h
src/service/: Service.h  ServiceManager.cpp  ServiceManager.h  ServiceThread.h
src/shared/: ServiceSharedMemory.h
src/supervisor/: SupervisorService.cpp  SupervisorService.h
src/transmission/: ConnectionManager.hpp  TransmissionService.h  TransmissionService.hpp  Transmitter.h
src/transmission/msg/: Handshake.hpp  Message.h
src/transmission/net/: SocketProxy.h  TcpSocket.h
test/: CMakeLists.txt
test/containers/: AtomicMapTests.cpp
test/core/: JsonTests.cpp  ServiceManagerTests.cpp  ServiceTests.cpp
test/mocks/: EventProviderWrapper.hpp  ServiceMock.hpp  TcpSocketMock.hpp  ThreadMock.hpp
test/supervisor/: SupervisorServiceTests.cpp
test/transmission/: TransmissionServiceTests.cpp
test/transmission/net/: SocketProxyTests.cpp
